--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,10 @@
   "projects": {
     "WeatherClient": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {"@schematics/angular:component": {
+        "style": "scss"
+      } 
+    },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -26,7 +29,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
